# SyntacticAnalyzer

./: .gitignore  README.md  SyntacticAnalyzer.cabal
src/: Analysis.hs  Expression.hs  FSM.hs  Main.hs  Operation.hs  Parser.hs  Simulator.hs  Tree.hs  Util.hs
